--- a/Home_Works/Grand_HomeWork/config_files/keepalived.conf
+++ b/Home_Works/Grand_HomeWork/config_files/keepalived.conf
@@ -5,12 +5,21 @@ global_defs {
     script_user root
 }
 
-vrrp_script chk_hap_service {
-script "/usr/bin/cat /var/lib/pgpro/std-12/data/postmaster.pid"
-interval 2
+vrrp_script chk_haproxy {
+script "pkill -0 haproxy"
+interval 1
 timeout 2
-!weight 5
-rise 2
+!weight 6
+rise 1
+fall 2
+}
+
+vrrp_script chk_keepalived {
+script "pkill -0 keepalived"
+interval 1
+timeout 2
+!weight 6
+rise 1
 fall 2
 }
 
@@ -38,6 +47,7 @@ vrrp_instance hap_srv {
         10.129.0.10/24 dev eth0 label eth0:1
     }
     track_script {
-        chk_hap_service
+        chk_haproxy
+        chk_keepalived
     }
 }
