--- a/Home_Works/Grand_HomeWork/config_files/keepalived.conf
+++ b/Home_Works/Grand_HomeWork/config_files/keepalived.conf
@@ -7,9 +7,9 @@ global_defs {
 
 vrrp_script chk_haproxy {
 script "pkill -0 haproxy"
-interval 1
-timeout 2
-!weight 6
+interval 5
+!timeout 2
+weight -4
 rise 1
 fall 2
 }
