--- a/Home_Works/Grand_HomeWork/config_files/keepalived.conf
+++ b/Home_Works/Grand_HomeWork/config_files/keepalived.conf
@@ -17,8 +17,8 @@ fall 2
 vrrp_script chk_keepalived {
 script "pkill -0 keepalived"
 interval 1
-timeout 2
-!weight 6
+!timeout 2
+weight 6
 rise 1
 fall 2
 }
