--- a/Home_Works/Grand_HomeWork/config_files/keepalived.conf
+++ b/Home_Works/Grand_HomeWork/config_files/keepalived.conf
@@ -25,7 +25,7 @@ fall 2
 
 vrrp_instance hap_srv {
     ! Указывает на то что в каком состоянии стартует нода
-    state BACKUP
+    state MASTER
     ! MASTER
     ! Интерфейс для виртуальных IP
     interface eth0
