--- a/Home_Works/Grand_HomeWork/config_files/consul.service
+++ b/Home_Works/Grand_HomeWork/config_files/consul.service
@@ -9,7 +9,7 @@ Type=simple
 User=consul
 Group=consul
 ExecStart=/usr/bin/consul agent \
-    -node=pg-srv \
+    -node=pg-srv1 \
     -config-dir=/etc/consul.d
 ExecReload=/bin/kill -HUP $MAINPID
 KillSignal=SIGINT
