--- a/Home_Works/Grand_HomeWork/config_files/haproxy.cfg
+++ b/Home_Works/Grand_HomeWork/config_files/haproxy.cfg
@@ -33,9 +33,9 @@ listen primary
     option httpchk OPTIONS /master
     http-check expect status 200
     default-server inter 3s fall 3 rise 2 on-marked-down shutdown-sessions
-    server patroni1 10.129.0.21:6432 maxconn 100 check port 8008
-    server patroni2 10.129.0.22:6432 maxconn 100 check port 8008
-    server patroni3 10.129.0.23:6432 maxconn 100 check port 8008
+    server pg-srv1 10.129.0.21:6432 maxconn 100 check port 8008
+    server pg-srv2 10.129.0.22:6432 maxconn 100 check port 8008
+    server pg-srv3 10.129.0.23:6432 maxconn 100 check port 8008
 
 listen standby
     bind 10.129.0.10:5003
@@ -43,6 +43,6 @@ listen standby
     option httpchk OPTIONS /replica
     http-check expect status 200
     default-server inter 3s fall 3 rise 2 on-marked-down shutdown-sessions
-    server patroni1 10.129.0.21:6432 maxconn 100 check port 8008
-    server patroni2 10.129.0.22:6432 maxconn 100 check port 8008
-    server patroni3 10.129.0.23:6432 maxconn 100 check port 8008
+    server pg-srv1 10.129.0.21:6432 maxconn 100 check port 8008
+    server pg-srv2 10.129.0.22:6432 maxconn 100 check port 8008
+    server pg-srv3 10.129.0.23:6432 maxconn 100 check port 8008
