--- a/Home_Works/Grand_HomeWork/config_files/vm3_patroni.yml
+++ b/Home_Works/Grand_HomeWork/config_files/vm3_patroni.yml
@@ -50,12 +50,13 @@ postgresql:
   connect_address: "10.129.0.23:5432"
   data_dir: /var/lib/postgresql/15/main/
   bin_dir: /usr/lib/postgresql/15/bin/
+  config_dir: /etc/postgresql/15/main/
   pg_rewind:
-    username: postgres
+    username: patroni
     password: password
   replication:
     username: replicator
     password: replicator
   superuser:
-    username: postgres
+    username: patroni
     password: postgres
